Changes to files: Http/Controllers/.gitkeep Http/Controllers/OutgoingController.php Http/Requests/.gitkeep Listeners/SendSms.php Models/.gitkeep Models/Blacklist.php Models/Contact.php Models/Gateway.php Models/Outgoing.php Models/Signature.php Models/Whitelist.php Providers/EventServiceProvider.php Routes/.gitkeep Routes/web.php composer.json

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,14 @@
   },
   "autoload": {
     "psr-4": {
-      "Modules\\Sms\\": ""
+      "Modules\\Sms\\": "app/",
+      "Modules\\Sms\\Database\\Factories\\": "database/factories/",
+      "Modules\\Sms\\Database\\Seeders\\": "database/seeders/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Modules\\Sms\\Tests\\": "tests/"
     }
   }
 }
